fixed squishiness on jobs, contact, home

--- a/MVCProject/WebContent/css/jobs.css
+++ b/MVCProject/WebContent/css/jobs.css
@@ -53,107 +53,111 @@ ul.topnav li.btnright {
 }
 
 .btn {
-	border-radius: 10%;
 	padding: 0px;
 	text-align: center;
 }
 
 /* Home Page Styling */
-#homePageTitle, h1 {
+#homePageTitle {
 	color: #813370;
-	position: absolute;
     top: 20%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
 }
 
 #homeSubTitle {
 	color: #A9A9A9;
-	position: absolute;
     top: 30%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
 }
 
 #loginButton {
-	position: absolute;
     top: 40%;
     left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
 } 
 
 #registerButton {
-	position: absolute;
     top: 45%;
     left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
 }
 
 .motivation {
-	position: absolute;
     top: 65%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    width: 80%
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Error Page Styling */
 .errorimg {
-	position: absolute;
 	top: 45%;
     left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
     height: 150px;
 }
 
 /* Job Page Styling */
-.jobAddShow {
-	position: absolute;
-	top: 33%;
-	left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+
+.jobAppsHead {
+	color: #813370;
+    top: 20%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
 }
 
 .jobAdd{
-	position: absolute;
 	top: 40%;
-	left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)	
+	width: 60%;
+	margin-left: auto;
+    margin-right: auto;
 }
 
 .jobShow {
-	position: absolute;
 	top: 50%;
-	width: 83%;
+	width: 100%;
 }
 
 tr:nth-child(even) {
     background-color: #f2f2f2
 }
 
-table {
-    border: 1px solid black;
-    font-size: 12px;
-    width: 100%;
+.tableDiv {
+	overflow-x: auto;
 }
 
+/* table {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    
+} */
+
 .jobEdit, .jobDetails {
-	position: absolute;
 	top: 50%;
-	left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)	
+	width: 40%;
+	margin-left: auto;
+    margin-right: auto;
 }
 
 /* Contact Page Styling */
+.contactsHead {
+	color: #813370;
+    top: 20%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+	
+}
+
+.contactForm {
+	top: 40%;
+	width: 30%;
+	margin-left: auto;
+    margin-right: auto;
+}
 #ctcHeader {
 	background-color:#778899;
 }
